--- a/package.json
+++ b/package.json
@@ -15,12 +15,13 @@
     "react-scripts": "4.0.0",
     "web-vitals": "^0.2.4"
   },
-  "scripts": {
-    "start": "node server.js", 
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
-  },
+ "scripts": {
+  "start": "node server.js",
+  "build": "npm install && react-scripts build",
+  "test": "react-scripts test",
+  "eject": "react-scripts eject"
+}
+
   "eslintConfig": {
     "extends": ["react-app", "react-app/jest"]
   },
