--- a/package.json
+++ b/package.json
@@ -17,11 +17,10 @@
   },
  "scripts": {
   "start": "node server.js",
-  "build": "npm install && react-scripts build",
+  "build": "react-scripts build",
   "test": "react-scripts test",
   "eject": "react-scripts eject"
 }
-
   "eslintConfig": {
     "extends": ["react-app", "react-app/jest"]
   },
