--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-REACT_APP_API_BASE_URL=https://we-love-movies-back-end-qijg.onrender.com
+REACT_APP_API_BASE_URL=https://api.render.com/deploy/srv-cl617nil7jac73d4fve0?key=qabnbYTo0UQ
